RESOLVED FIXED234253
Regression(r283565) Unable to report private messages as Spam in Twitter app
https://bugs.webkit.org/show_bug.cgi?id=234253
Summary Regression(r283565) Unable to report private messages as Spam in Twitter app
Chris Dumez
Reported 2021-12-13 10:25:27 PST
Unable to report private messages as Spam in Twitter app since r283565.
Attachments
Patch (6.21 KB, patch)
2021-12-13 10:31 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-12-13 10:25:37 PST
Chris Dumez
Comment 2 2021-12-13 10:31:23 PST
Alex Christensen
Comment 3 2021-12-13 10:33:51 PST
Comment on attachment 447025 [details] Patch The original change also changed ResourceHandle. Should we add the linked-on-or-after checks there too?
Chris Dumez
Comment 4 2021-12-13 10:34:45 PST
(In reply to Alex Christensen from comment #3) > Comment on attachment 447025 [details] > Patch > > The original change also changed ResourceHandle. Should we add the > linked-on-or-after checks there too? I'd be tempted to wait until we get a report of breakage in iOS wk1. What do you think?
Alex Christensen
Comment 5 2021-12-13 10:35:38 PST
Comment on attachment 447025 [details] Patch I'm not sure. You make the call.
Geoffrey Garen
Comment 6 2021-12-13 10:38:21 PST
r=me Does this workflow work in the browser? Seems like it would be broken everywhere if the server were broken.
Chris Dumez
Comment 7 2021-12-13 10:43:42 PST
(In reply to Geoffrey Garen from comment #6) > r=me > > Does this workflow work in the browser? Seems like it would be broken > everywhere if the server were broken. I wasn't able to reproduce the issue in browser, only in the Twitter app.
EWS
Comment 8 2021-12-13 12:31:19 PST
Committed r286971 (245193@main): <https://commits.webkit.org/245193@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447025 [details].
Chris Dumez
Comment 9 2021-12-13 15:01:54 PST
Follow-up build fix in <https://commits.webkit.org/r286986>.
Note You need to log in before you can comment on or make changes to this bug.